--- a/environment.yaml
+++ b/environment.yaml
@@ -1,4 +1,46 @@
 name: toyota-rag
 channels:
+  - conda-forge
   - defaults
+dependencies:
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - attrs=24.2.0=pyh71513ae_0
+  - bzip2=1.0.8=h4bc722e_7
+  - ca-certificates=2024.8.30=hbcca054_0
+  - importlib_resources=6.4.5=pyhd8ed1ab_0
+  - jsonschema=4.23.0=pyhd8ed1ab_0
+  - jsonschema-specifications=2023.12.1=pyhd8ed1ab_0
+  - jupyter_core=5.7.2=pyh31011fe_1
+  - ld_impl_linux-64=2.43=h712a8e2_1
+  - libexpat=2.6.3=h5888daf_0
+  - libffi=3.4.2=h7f98852_5
+  - libgcc=14.1.0=h77fa898_1
+  - libgcc-ng=14.1.0=h69a702a_1
+  - libgomp=14.1.0=h77fa898_1
+  - libnsl=2.0.1=hd590300_0
+  - libsqlite=3.46.1=hadc24fc_0
+  - libuuid=2.38.1=h0b41bf4_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libzlib=1.3.1=h4ab18f5_1
+  - nb-clean=3.3.0=pyhd8ed1ab_0
+  - nbformat=5.10.4=pyhd8ed1ab_0
+  - ncurses=6.5=he02047a_1
+  - openssl=3.3.2=hb9d3cd8_0
+  - pip=24.2=pyh8b19718_1
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
+  - platformdirs=4.3.6=pyhd8ed1ab_0
+  - python=3.12.6=hc5c86c4_1_cpython
+  - python-fastjsonschema=2.20.0=pyhd8ed1ab_0
+  - python_abi=3.12=5_cp312
+  - readline=8.2=h8228510_1
+  - referencing=0.35.1=pyhd8ed1ab_0
+  - rpds-py=0.20.0=py312h12e396e_1
+  - setuptools=75.1.0=pyhd8ed1ab_0
+  - tk=8.6.13=noxft_h4845f30_101
+  - traitlets=5.14.3=pyhd8ed1ab_0
+  - tzdata=2024a=h8827d51_1
+  - wheel=0.44.0=pyhd8ed1ab_0
+  - xz=5.2.6=h166bdaf_0
+  - zipp=3.20.2=pyhd8ed1ab_0
 prefix: /home/pandysudhan/miniconda3/envs/toyota-rag
